[package]
name = "ws2811"
version = "0.1.0"
edition = "2021"
rs_ws281x = "0.4.4"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rs_ws281x = "0.4.4"
serde = "1.0.166"
serde_derive = "1.0.166"

[build-dependencies]
bindgen = { version = "0.66.1", default-features = false }
cc = "1.0"

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'
